# app_destinos_interinos

./: .gitignore  LICENSE  Makefile  README.md  SUPABASE_SETUP.md  app.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.streamlit/: secrets.toml
config/: database.yaml  logging_config.py  settings.example.yaml  settings.yaml
data/Almeria/: centros_educativos_primaria.csv  centros_educativos_secundaria.csv
data/Cadiz/: centros_educativos_primaria.csv  centros_educativos_secundaria.csv
data/Cordoba/: centros_educativos_primaria.csv  centros_educativos_secundaria.csv
data/Granada/: centros_educativos_primaria.csv  centros_educativos_secundaria.csv
data/Huelva/: centros_educativos_primaria.csv  centros_educativos_secundaria.csv
data/Jaen/: centros_educativos_primaria.csv  centros_educativos_secundaria.csv
data/Malaga/: centros_educativos_primaria.csv  centros_educativos_secundaria.csv
data/Sevilla/: centros_educativos_primaria.csv  centros_educativos_secundaria.csv
documents/: guion_video_explicativo.md  mejorado_prompt.md
examples/: streamlit_city_normalizer_example.py
sql/: create_tables.sql
src/: __init__.py  distance_calculator.py  exceptions.py  llm_connector.py  main.py  processor.py  styles.py
src/config/: __init__.py  logging_config.py
src/database/: cache_manager.py  db_manager.py  distance_cache.py  supabase_manager.py
src/scripts/: check_cache.py  check_db.py  fix_duplicate_cities.py  (+1 more)
tests/: test_database.py  test_distance_calculator.py  test_exceptions.py  test_llm_connector.py  test_processor.py
(+4 files in other folders)
